--- a/lesson 4/index.html
+++ b/lesson 4/index.html
@@ -4,44 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="icon.jfif" type="image/x-icon">
     <title>Українська правда - новини онлайн</title>
 </head>
 <body>
     <div>
         <div class="menu">
-            <div class="menu1">
-             <div class="p"><p><b>ПОЛІТИКА</b></p></div>
-             <div class="p"><p><b>ЕКОНОМІКА</b></p></div>
-             <div class="p"><p><b>ЖИТТЯ</b></p></div>
-             <div class="p"><p><b>ЄВРОПА</b></p></div>
-             <div class="p"><p><b>ФОРУМ</b></p></div>
-             <div class="p"><p><b>БЛОГИ</b></p></div>
-             <div class="p"><p><b>ІСТОРИЧНА ПРАВДА</b></p></div>
-             <div class="p"><p><b>ТАБЛОID</b></p></div>
-             <div class="p"><p><b>ДОСТУП</b></p></div>
+            <div class="menu1 cursor">
+             <div class="red"><p>ПОЛІТИКА</p></div>
+             <div><p>ЕКОНОМІКА</p></div>
+             <div><p>ЖИТТЯ</p></div>
+             <div><p>ЄВРОПА</p></div>
+             <div><p>ФОРУМ</p></div>
+             <div><p>БЛОГИ</p></div>
+             <div><p>ІСТОРИЧНА ПРАВДА</p></div>
+             <div><p>ТАБЛОID</p></div>
+             <div><p>ДОСТУП</p></div>
             </div>
         </div>
 
         <div class="red_menu">
-            <div><p class="p3 rosdil"><b>УСІ РОЗДІЛИ</b></div>
-            <div><p class="p4 ukr"><b>УКРАЇНСЬКА ПРАВДА</b>
-            <div><p class="p5 zasnovnuk"><b>ЗАСНОВАНА ГЕОРГІЄМ ГОНГАДЗЕ У 2000 РОЦІ</b></div>
+            <div class="cursor">
+                <div class="padimg"><img src="menuicon.png" alt="menuicon"></div>
+                <div class="rosdil">УСІ РОЗДІЛИ</div>
             </div>
-            <div><p class="p6 ukrrus"><b>УКР/РУС</b><div class="p6 club"><b>КЛУБ УП</b></div></div>
+            <div class="ukrpravda marpad cursor">УКРАЇНСЬКА ПРАВДА
+                <div class="zasnovnuk marpad cursor">ЗАСНОВАНА ГЕОРГІЄМ ГОНГАДЗЕ У 2000 РОЦІ</div>
+            </div>
+            <div class="ukrrus cursor">УКР/РУС<div class="club">КЛУБ УП</div></div>
         </div>
 
         <div class="menu">
-            <div class="menu2">
-             <div class="p2"><p><b>ГОЛОВНА</b></p></div>
-             <div class="p2"><p><b>НОВИНИ</b></p></div>
-             <div class="p2"><p><b>ПУБЛІКАЦІЇ</b></p></div>
-             <div class="p2"><p><b>КОЛОНКИ</b></p></div>
-             <div class="p2"><p><b>ІНТЕРВ'Ю</b></p></div>
-             <div class="p2"><p><b>ГРАФІКА</b></p></div>
-            <div class="p2"><p><b>ФОТО/ВІДЕО</b></p></div>
-             <div class="p2"><p><b>БЛОГИ</b></p></div>
-             <div class="p2"><p><b>ПОДКАСТИ</b></p></div>
-             <div class="p2"><p><b>АРХІВ</b></p></div>
+            <div class="menu2 cursor">
+             <div class="red"><p>ГОЛОВНА</p></div>
+             <div><p>НОВИНИ</p></div>
+             <div><p>ПУБЛІКАЦІЇ</p></div>
+             <div><p>КОЛОНКИ</p></div>
+             <div><p>ІНТЕРВ'Ю</p></div>
+             <div><p>ГРАФІКА</p></div>
+             <div><p>ФОТО/ВІДЕО</p></div>
+             <div><p>БЛОГИ</p></div>
+             <div><p>ПОДКАСТИ</p></div>
+             <div><p>АРХІВ</p></div>
             </div>
         </div>
     </div>
