--- a/lesson 4/index.html
+++ b/lesson 4/index.html
@@ -25,7 +25,11 @@
 
         <div class="red_menu">
             <div class="cursor">
-                <div class="padimg"><img src="menuicon.png" alt="menuicon"></div>
+                <div class="padimg">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
                 <div class="rosdil">УСІ РОЗДІЛИ</div>
             </div>
             <div class="ukrpravda marpad cursor">УКРАЇНСЬКА ПРАВДА
