--- a/lesson 10/index.html
+++ b/lesson 10/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="car"></div>
-    <script src="script.js"></script>
+    <script src=js.js></script>
 </body>
 </html>
