--- a/lesson 9/index.html
+++ b/lesson 9/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="car"></div>
-    <script src="script.js"></script>
+<script src=value.js></script> 
 </body>
 </html>
